# evidence_theory

./: .gitignore  README.md  experimant.ipynb  pyproject.toml
evidence_theory_simulation/: core.py  experiment.py
tests/: test_evidence_theory_simulation.py
