[tool.poetry]
name = "evidence_theory_simulation"
version = "0.1.0"
description = ""
authors = ["Michele Urbani <michele@didatec.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
flake8 = "^3.9.2"
pandas = "1.2.5"
seaborn = "^0.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
